ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Minor - P4
    • 8.3.0-rc0, 8.2.2
    • Affects Version/s: None
    • Component/s: None
    • None
    • Query Optimization
    • Fully Compatible
    • ALL
    • v8.2
    • 200
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      replayWorkloadRecordingFile is a native method injected into the mongo shell.

      It uses the same functionality as `mongor`, but is convenient for use in tests.

      It has multiple issues; it does not correctly validate the number of arguments to be exactly 2, and so unchecked accesses past the end of a vector, segfaulting.

      It also tasserts from within spawned threads. As this goes uncaught, the process terminates.

      That was already identified for `mongor` itself, and is an intermediate state while additional functionality is added.

      However, this causes `mongo` to terminate in the same cases, which is not acceptable for tests. Relatedly, test coverage is lacking, as there's no validation of behaviour in such situations.

            Assignee:
            James Harrison
            Reporter:
            James Harrison
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: