SERVER-108002: Correct replayWorkloadRecordingFile validation (#39117)

GitOrigin-RevId: bf301ece8af28a5ce7201697aaa33fcbd3f8b205